Settlement discrepancy code w/o usages.
